--- a/index.html
+++ b/index.html
@@ -18,27 +18,16 @@
       </ul>
     </div>
     </div>
+    <!--Anvil photo styled in css-->
     <div class="headerPhoto">
-      <h1>Welcome to Will Hicks' Portfolio</h1>
+      <h1>William Hicks
+        <br>
+        Developer
+      </h1>
     </div>
-    <div class="paraOne">
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem illo
-        recusandae cum quidem rem error neque modi odit voluptate eos.
-      </p>
-    </div>
-    <div class="paraTwo">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
-        magnam doloremque ducimus dolor maxime reiciendis culpa perferendis
-        eaque obcaecati praesentium!
-      </p>
-    </div>
-    <div class="paraThree">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ipsum
-        architecto ipsa facere debitis fuga autem id maxime accusantium harum.
-      </p>
+    <div class="profileBike">
+      <img src="./images/bikes.JPG" alt="profile photo">
     </div>
   </body>
 </html>
+
