--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
       <!--Links to internal and external-->
     <div class="navbar">
         <ul>
-      <li><a href="#">Projects</a></li>
-      <li><a href="#">Dev Links</a></li>
-      <li><a href="#">MIT XPRO</a></li>
+      <li><a class="projects" href="#">Projects </a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="https://xpro.mit.edu/" target="_blank">MIT xPRO</a></li>
+      <li class="contact"> <a href="mailto:will.hicks87@gmail.com">Contact</a></li>
       </ul>
     </div>
     </div>
@@ -22,7 +23,7 @@
     <div class="headerPhoto">
       <h1>William Hicks
         <br>
-        Developer
+        Portfolio
       </h1>
     </div>
     <div class="profileBike">
@@ -30,3 +31,4 @@
     </div>
   </body>
 </html>
+
