--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -32,7 +32,7 @@
         <p>Ball animation that moves on the screen with reverse properties</p>
         <br>
         <br>
-        <a href="#" class="movingBall">Watch the Moving Ball</a>
+        <a href="willh87.github.io/Projects/ball mover/index_ball_movement.html" class="movingBall">Watch the Moving Ball</a>
     </div>
     <div class="projectTwo"><h2>Projectiles</h2>
         <br>
