--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <!--Links to internal and external-->
     <div class="navbar">
         <ul>
-      <li><a class="projects" href="https://willh87.github.io/Projects/projects.html">Projects </a></li>
+      <li><a class="projects" href="./Projects/projects.html">Projects </a></li>
       <li><a href="#">About</a></li>
       <li><a href="https://xpro.mit.edu/" target="_blank">MIT xPRO</a></li>
       <li class="contact"> <a href="mailto:will.hicks87@gmail.com">Contact</a></li>
