--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -12,7 +12,7 @@
       <!--Links to internal and external-->
     <div class="navbar">
         <ul>
-      <li><a class="Home" href="../index.html">Home</a></li>
+      <li><a class="Home" href="willh87.github.io">Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href="https://xpro.mit.edu/" target="_blank">MIT xPRO</a></li>
       <li class="contact"> <a href="mailto:will.hicks87@gmail.com">Contact</a></li>
