--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -12,7 +12,7 @@
       <!--Links to internal and external-->
     <div class="navbar">
         <ul>
-      <li><a class="Home" href="willh87.github.io">Home</a></li>
+      <li><a class="Home" href="../index.html">Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href="https://xpro.mit.edu/" target="_blank">MIT xPRO</a></li>
       <li class="contact"> <a href="mailto:will.hicks87@gmail.com">Contact</a></li>
@@ -32,7 +32,7 @@
         <p>Ball animation that moves on the screen with reverse properties</p>
         <br>
         <br>
-        <a href="willh87.github.io/Projects/ball mover/index_ball_movement.html" class="movingBall">Watch the Moving Ball</a>
+        <a href="./ball mover/index_ball_movement.html" class="movingBall">Watch the Moving Ball</a>
     </div>
     <div class="projectTwo"><h2>Projectiles</h2>
         <br>
