--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -53,10 +53,10 @@
    <div class="projectFour"><h2>Walk Boston</h2>
     <br>
     <br>
-    <p>Walking through an array of data</p>
+    <p>Walking through an array of data related to salaries</p>
     <br>
     <br>
-<a href="#" class="boston">View the Walk Boston Data</a>
+<a href="#" class="boston">View Walk Boston</a>
 </div>
 <br>
 <br>
