--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact || Will Hicks</title>
+    <title>About || Will Hicks</title>
     <!-- normalize -->
     <link rel="stylesheet" href="./normalize.css">
     <!-- styles -->
@@ -26,7 +26,7 @@
           <!-- links -->
           <ul class="nav-items">
             <li><a href="./index.html" class="nav-link">home</a></li>
-            <li><a href="./about.html" class="nav-link">about</a></li>
+            <li><a href="./contact.html" class="nav-link">contact</a></li>
             <li><a href="./projects.html" class="nav-link">projects</a></li>
             <li><a href="https://xpro.mit.edu" class="nav-link">mit xpro</a></li>
           </ul>
@@ -64,43 +64,13 @@
       <!-- header -->
       <header class="contact-header">
           <div class="logo logo-center">
-              <h2>contact<span> me</span></h2>
+              <h2>About<span> me</span></h2>
               <div class="underline contact-underline"></div>
           </div>
       </header>
       <!-- end header -->
-      <section class="section section-center contact-center">
-          <article class="contact-info">
-              <div class="contact-container">
-              <button class="btn contact-btn"><a type='email' href="mailto:will.hicks87@gmail.com"><i class="fas fa-envelope"></i></a></button>
-              <p>please feel free to email me directly to start a conversation</p>
-              <div class="underline contact-underline"></div>
-              <p>You can also reach me via <a href="https://www.linkedin.com/in/william-hicks-925785144">LinkedIn</a> or use the contact form located on this page. <br> I look forward to hearing from you.</p>
-            </div>
-          </article>
-      <!-- form contact-->
-    <form action="https://formspree.io/f/xyyokdoa" class="form" method="POST">
-        <h4>contact form</h4>
-        <div class="form-row">
-            <label for="name" class="form-label">Name</label>
-            <input type="text" placeholder="your name" id="name" class="form-input" name="name">
-        </div>
-        <div class="form-row">
-            <label for="number" class="form-label">Number</label>
-            <input type="text" id="number" class="form-input" name="number">
-        </div>
-        <div class="form-row">
-            <label for="email" class="form-label">Email</label>
-            <input type="email"  id="email" class="form-input" name="email">
-            <small class="form-alert">please provide a value</small>
-        </div>
-        <div class="form-row">
-            <label for="textarea" class="form-label">Textarea</label>
-            <textarea class="form-textarea" name="textarea">
-            </textarea>
-        </div>
-        <button type="submit" class="btn btn-block">submit</button>
-    </form>
+      <section class="section section-center about-center">
+   
 </section>
         <!-- footer -->
         <footer class="footer">
@@ -135,7 +105,8 @@
                 <a href="mailto:will.hicks87@gmail.com" type="email" class="social-icon"><i class="fas fa-envelope"></i></a>
               </li>
             </ul>
-            <p>&copy; <span id="date"></span> will hicks. all rights reserved </p>
+            <p>&copy; <span id="date"></span> will hicks. all rights reserved
+            </p>
           </footer>
         <!-- end footer -->
     <script src="./app.js"></script>
