altered single projects class name

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="underline"></div>
             </div>
                     <!-- project -->
-                    <article class="single-project">
+                    <article class="single-projects">
                       <div class="img-container">
                         <img src="../pacman1.jpg" id="project-img" alt="">
                       </div>
