Added webkits and updated styling
Added notes and credit links in styles.css with webkits.

--- a/about.html
+++ b/about.html
@@ -69,9 +69,25 @@
           </div>
       </header>
       <!-- end header -->
-      <section class="section section-center about-center">
-   
-</section>
+        <!-- about section-->
+    <section class="section about" id="about">
+        <div class="section-center about-center about-page-center">
+          <!-- about img -->
+          <article class="about-img">
+            <img src="./images/profile1.jpg" class="hero-photo" alt="about img">
+          </article>
+          <!-- about info-->
+          <article class="about-info">
+            <p>Hey there! Thanks for visiting my portfolio. My name is William Hicks and I currently reside in Las Vegas, NV.</p>
+            <p>I am currently a student with MIT xPRO studying web development with emphasis on MERN. On this website you will find current and past projects with MIT xPRO, as well as independent projects I am always working on.
+            <p>My past work history includes over a decade in clinical healthcare with an emphasis on Emergency Medicine, Critical Care, and Aviation. I have an in-depth knowledge of what works and doesn't work for healthcare providers interacting with software currently in the industry.</p>
+            </p>
+            <p>My hobbies outside of work include Blacksmithing, riding motorcycles, and reading.</p>
+            <p>Please feel free to <a href="./contact.html">contact me</a> to learn more!</p>
+          </article>
+        </div>
+      </section>
+    <!-- end about section -->
         <!-- footer -->
         <footer class="footer">
             <!-- social icons-->
