--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <i class="fab fa-sketch service-icon"></i>
             <h4>design</h4>
             <div class="underline"></div>
-            <p>Vibrant colors and palattes for capturing your client's eye related to your project. Colors and design have a psychological impact, make sure it fits your product.</p>
+            <p>Vibrant colors and palattes for capturing your client's eye related to your product. Colors and design have a psychological impact, make sure it fits your product.</p>
           </article>
           <!-- end of single service -->
            <!-- single service -->
@@ -134,7 +134,7 @@
             <!-- end of section title-->
             <p>Hey there! Thanks for visiting my portfolio. My name is William Hicks and I currently reside in Las Vegas, NV.</p>
             <p>I am currently a student with MIT xPRO studying web development with emphasis on MERN. On this website you will find current and past projects with MIT xPRO, as well as independent projects I am always working on. Please feel free to browse and contact me!</p>
-            <a href="./about.html" class="btn">about me</a>
+            <a href="./about.html" class="btn about-btn">about me</a>
           </article>
         </div>
       </section>
