--- a/projects.html
+++ b/projects.html
@@ -70,13 +70,12 @@
       </header>
       <!-- end header -->
       <section class="section section-center project-center">
-  
-    <div class="projects-page-center">
+      <div class="projects-page-center">
       <!-- single project -->
       <article class="single-project">
         <div class="project-container">
           <img src="./images/pacman1.jpg" class="img project-img" alt="single project">
-          <a href="https://www.github.com/willh87" class="project-icon">
+          <a href="https://www.github.com/willh87/pacmen" class="project-icon">
             <i class="fab fa-github"></i>
           </a>
         </div>
@@ -89,11 +88,11 @@
         </div>
       </article>
       <!-- end of single project -->
-           <!-- single project -->
+      <!-- single project -->
       <article class="single-project">
         <div class="project-container">
           <img src="./images/eyes1.jpg" class="img project-img" alt="single project">
-          <a href="https://www.github.com/willh87" class="project-icon">
+          <a href="https://www.github.com/willh87/eyes" class="project-icon">
             <i class="fab fa-github"></i>
           </a>
         </div>
@@ -106,11 +105,11 @@
         </div>
       </article>
       <!-- end of single project -->
-           <!-- single project -->
+      <!-- single project -->
       <article class="single-project">
         <div class="project-container">
           <img src="./images/bus1.jpg" class="img project-img" alt="single project">
-          <a href="https://www.github.com/willh87" class="project-icon">
+          <a href="https://www.github.com/willh87/bus-tracker" class="project-icon">
             <i class="fab fa-github"></i>
           </a>
         </div>
