--- a/Pacmen/index.html
+++ b/Pacmen/index.html
@@ -1,19 +1,36 @@
 <html>
-<head>
+  <head>
     <title>Pacmen || Will Hicks</title>
-    <link rel="stylesheet" href="./styles.css">  
-</head>
-<body>
-    
-    <div id='game'>
-        <div class="btn-container">
-        <button  onclick='makeOne()'  width='200' height='30' class="btn" id="make-one">Make PacMen</button>
-        <button  onclick='update()' width='200' height='30' class="btn" id="update">Start Game</button>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <div id="game">
+      <div class="btn-container">
+        <button
+          onclick="makeOne()"
+          width="200"
+          height="30"
+          class="btn"
+          id="make-one"
+        >
+          Make PacMen
+        </button>
+        <button
+          onclick="update()"
+          width="200"
+          height="30"
+          class="btn"
+          id="update"
+        >
+          Start Game
+        </button>
         <button class="btn" id="btn">Color Changer</button>
-        <button class="btn home-btn"><a href="http://willh87.github.io" id="linkHome">Home</a></button>
-    </div>
+        <button class="btn home-btn">
+          <a href="https://willh87.github.io" id="linkHome">Home</a>
+        </button>
+      </div>
     </div>
     <script src="./app.js"></script>
     <script src="./hex.js"></script>
-</body>
+  </body>
 </html>
