--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <i class="fab fa-sketch service-icon"></i>
             <h4>design</h4>
             <div class="underline"></div>
-            <p>Vibrant colors and palattes for capturing your client's eye related to your product. Colors and design have a psychological impact, make sure it fits your product.</p>
+            <p>Vibrant colors and palattes for capturing your client's eye related to your product. Colors and design have a psychological impact, make sure it fits your product and the vision for the UI/UX to improve user experiences.</p>
           </article>
           <!-- end of single service -->
            <!-- single service -->
@@ -133,7 +133,7 @@
             </div>
             <!-- end of section title-->
             <p>Hey there! Thanks for visiting my portfolio. My name is William Hicks and I currently reside in Las Vegas, NV.</p>
-            <p>I am currently a student with MIT xPRO studying web development with emphasis on MERN. On this website you will find current and past projects with MIT xPRO, as well as independent projects I am always working on. Please feel free to browse and contact me!</p>
+            <p>I am currently a student with MIT xPRO studying web development with emphasis on MERN. On this website you will find current and past projects with MIT xPRO, as well as independent projects I am always working on. Please feel free to browse this portfolio, and my <a href="https://www.github.com/willh87">github repositories</a>. Like what you see? <a href="./contact.html">Hire me!</a></p>
             <a href="./about.html" class="btn about-btn">about me</a>
           </article>
         </div>
