commits for video addition
added imbed of Youtube video and styling

--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
         <div class="section-center about-center">
           <!-- about img -->
           <article class="about-img">
-            <img src="./images/profile1.jpg" class="hero-photo" alt="about img">
+            <!-- <img src="./images/profile1.jpg" class="hero-photo" alt="about img"> -->
+            <iframe class="youtube" src="https://www.youtube.com/embed/cb_vl6Wfdb0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </article>
           <!-- about info-->
           <article class="about-info">
