--- a/contact.html
+++ b/contact.html
@@ -92,10 +92,9 @@
         <div class="form-row">
             <label for="email" class="form-label">Email</label>
             <input type="email"  id="email" class="form-input" name="email">
-            <small class="form-alert">please provide a value</small>
         </div>
         <div class="form-row">
-            <label for="textarea" class="form-label">Textarea</label>
+            <label for="textarea" class="form-label">Message</label>
             <textarea class="form-textarea" name="textarea">
             </textarea>
         </div>
