abt info change
changed loc in abt me section

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
           </article>
           <!-- about info-->
           <article class="about-info">
-            <p>Hey there! Thanks for visiting my portfolio. My name is William Hicks and I currently reside in Las Vegas, NV.</p>
+            <p>Hey there! Thanks for visiting my portfolio. My name is William Hicks and I currently reside in northern NV.</p>
             <p>I am currently a student with MIT xPRO studying web development with emphasis on MERN. On this website you will find current and past projects with MIT xPRO, as well as independent projects I am always working on.
             <p>My past work history includes over a decade in clinical healthcare with an emphasis on Emergency Medicine, Critical Care, and Aviation. I have an in-depth knowledge of what works and doesn't work for healthcare providers interacting with software currently in the industry.</p>
             </p>
