--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <div class="underline"></div>
             </div>
             <!-- end of section title-->
-            <p>Hey there! Thanks for visiting my portfolio. My name is William Hicks and I currently reside in Las Vegas, NV.</p>
+            <p>Hey there! Thanks for visiting my portfolio. My name is William Hicks and I currently reside in northern NV.</p>
             <p>I am currently a student with MIT xPRO studying web development with emphasis on MERN. On this website you will find current and past projects with MIT xPRO, as well as independent projects I am always working on. Please feel free to browse this portfolio, and my <a href="https://www.github.com/willh87">github repositories</a>. Like what you see? <a href="./contact.html">Hire me!</a></p>
             <a href="./about.html" class="btn about-btn">about me</a>
           </article>
